[package]
name = "brainfucke-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Siri-chan/brainfuckers/"
readme = "README.md"
description = "A brainfuck interpreter and transpiler"
authors = ["Kira K. <siri1999kira@yahoo.co.jp>"]

[[bin]]
name = "brainfuckers"
path = "src/main.rs" 

[lib]
name = "libbrainfuckers"
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.13", optional = true }
getkey = { git = "https://github.com/Siri-chan/getkey.git" }

[features]
default = ["cc"]
cc = [] # ! ONLY WORKS ON UNIXES WITH A PATH CONTAINING A SYMBOLIC LINK `cc` TO A C COMPILER ! #
raw-mode = ["dep:crossterm"] # ! CURRENTLY BROKEN DO NOT USE ! #